Switch to Azure AD authentication instead of API key
- Add azure-identity dependency
- Use DefaultAzureCredential for AD-based authentication
- Authenticate with 'az login' instead of API key
- Update .env to only require endpoint, version, and deployment name
- No API key needed in credentials

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
-AZURE_OPENAI_API_KEY=your-api-key-here
 AZURE_OPENAI_API_VERSION=2024-02-01
 AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4
+
+# Azure AD Authentication:
+# Make sure you're authenticated with Azure CLI:
+#   az login
+# This will automatically use your Azure AD credentials
