--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 flask==3.0.0
 flask-cors==4.0.0
 python-dotenv==1.0.0
-openai==0.27.8
+openai
+azure-identity
 requests==2.31.0
 pillow==10.0.0
-httpx==0.24.1
