Added a script to deploy to Azure App Service

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,14 @@ AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4
 # Make sure you're authenticated with Azure CLI:
 #   az login
 # This will automatically use your Azure AD credentials
+
+# For deployment to an azure app service, set the following environment variables 
+APP_SERVICE_NAME=your-app-service-name
+RESOURCE_GROUP=your-resource-group-name
+APP_SERVICE_PLAN=your-app-service-plan-name
+AZURE_REGION=your-azure-region
+APP_SERVICE_PLAN_SKU=your-app-service-plan-sku
+
+# The Foundry project resource ID used for giving the app service AD access to the model endpoint.
+# You can find this in the Azure portal in the Properties page for the Foundry project where your model is deployed
+FOUNDARY_PROJECT_RESOURCE_ID=your-foundary-project-resource-id
